@@ -2,7 +2,6 @@ package com.enonic.xp.core.impl.export.writer;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -38,7 +37,7 @@ public class FileExportWriter
 
         try
         {
-            Files.write( itemPath, export.getBytes( StandardCharsets.UTF_8 ) );
+            Files.writeString( itemPath, export );
         }
         catch ( IOException e )
         {
